# modern-talking

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  colab.ipynb  environment.yml  eval.py  main.py  pyproject.toml  run_pipeline.py  setup.cfg  setup_colab_tpu.py  traineval.py  traineval_bilstm.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
data/: .gitignore
discussion_slides/24.05.2021/: presentation.tex
literature/: .gitignore  literature.bib
modern_talking/: Beobachtung  __init__.py  dataset.ipynb  dataset_lemma.ipynb  download_datasets.py  results.ipynb  results_eval.ipynb
modern_talking/data/: __init__.py  glove.py
modern_talking/evaluation/: __init__.py  f_measure.py  manual_errors.py  map.py  precision.py  recall.py  track_1.py  track_1_kp_matching.py  track_1_kp_matching_new.py
modern_talking/matchers/: __init__.py  baselines.py  bert.py  bert_based.py  bert_bilstm.py  bilstm.py  colab_utils.py  combine.py  combiner.py  distillbert_bilstm.py  encoding.py  layers.py  pretrained.py  regression.py  rule_based.py  simple_transformers.py  term_overlap.py  transformers.py  utils.py
modern_talking/model/: __init__.py
modern_talking/pipeline/: __init__.py  cli.py
modern_talking/results/: predictions-dev-transformers-bert-bert-base-uncased-batch-32-epochs-1-learn-2e-05-warmup-0.06.json  predictions-dev-transformers-roberta-roberta-base-batch-32-epochs-1-learn-2e-05-warmup-0.06.json  predictions-test-transformers-bert-bert-base-uncased-batch-32-epochs-1-learn-2e-05-warmup-0.06.json  predictions-test-transformers-roberta-roberta-base-batch-32-epochs-1-learn-2e-05-warmup-0.06.json  predictions-train-transformers-bert-bert-base-uncased-batch-32-epochs-1-learn-2e-05-warmup-0.06.json  predictions-train-transformers-roberta-roberta-base-batch-32-epochs-1-learn-2e-05-warmup-0.06.json
paper/: 00-abstract.tex  01-introduction.tex  02-related-work.tex  03-data.tex  04-approach.tex  05-appendix.tex  05-results.tex  06-conclusion-future-work.tex  06-error-analysis.tex  07-appendix.tex  07-conclusion-future-work.tex  custom.bib  emnlp2021.tex
paper/figures/: figure-classification-error.tex  figure-prediction-frequnecies.tex  table-errors.tex  table-examples.tex  table-results-new.tex  table-results.tex
roadmap/: .gitignore  2021-04-20.tex  2021-05-24.tex  2021-05-25-feedback.md  current-results.md  mlutalk.cls
talk/: short-talk.tex  talk.tex
