[metadata]
name = modern_talking
version = 0.1.0
description = Key-Point Analysis using Modern Natural Language Processing.
url = https://github.com/heinrichreimer/modern-talking
project_urls =
    Bug Tracker = https://github.com/heinrichreimer/modern-talking/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
